Added second register funcionality.

--- a/entrevista_dfeoli.ipynb
+++ b/entrevista_dfeoli.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "a05576cf-e878-44d3-b8d9-3f7c3b0b5284",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "63b39e2a-baa8-43c9-b21c-004754ee0374",
    "metadata": {},
    "outputs": [],
@@ -66,15 +66,18 @@
     "    def __str__(self):\n",
     "        return f\"Target current is: {self.targ_current}.\"\n",
     "\n",
-    "    def adjust_I(self, seed):\n",
+    "    def adjust_I(self, seed, flag=False):\n",
     "        self.seed = random.seed(seed)                 # Utiliza semillas para generar los valores aleatorios\n",
+    "        self.flag = flag\n",
+    "\n",
     "        current = random.uniform(1e-6, 5e-6)          # Crea valores pseudo-aleatorios entre 1e-6 y 5e-6\n",
     "        current_init = current                        # Guarda la corriente inicial\n",
     "        current_diff = self.targ_current - current\n",
     "\n",
     "        #print(\"La corriente inicial es de\",current_init)\n",
     "        \n",
-    "        reg=0                                         # Valor default del registro es 0. Caso en el que no es necesario ajustar corriente.\n",
+    "        reg = 0                                         # Valor default del registro es 0. Caso en el que no es necesario ajustar corriente.\n",
+    "        reg_2 = 0\n",
     "        if -0.05e-6 < current_diff < 0.05e-6:         \n",
     "            reg += 1\n",
     "\n",
@@ -84,6 +87,12 @@
     "                current = current - float(0.100e-6)\n",
     "                current_diff = self.targ_current - current\n",
     "                reg += 1\n",
+    "            if reg == 16 and self.flag == True:\n",
+    "                reg_2 = 8\n",
+    "                while current_diff <= -0.05e-6 and reg_2 <= 15:\n",
+    "                    current = current - float(0.100e-6)\n",
+    "                    current_diff = self.targ_current - current\n",
+    "                    reg_2 += 1\n",
     "            #print(\"La corriente final es de\",current,\" A.\\nEl registro es:\", reg-1)\n",
     "\n",
     "        elif current_diff >= 0.05e-6:                 # Suma 0.1 uA y actualiza el registro (1 <= reg <= 7)  \n",
@@ -92,25 +101,33 @@
     "                current = current + float(0.100e-6)\n",
     "                current_diff = self.targ_current - current\n",
     "                reg += 1\n",
+    "            if reg == 8 and self.flag == True:\n",
+    "                reg_2 = 1\n",
+    "                while current_diff >= 0.05e-6 and reg_2 <= 7:\n",
+    "                    current = current + float(0.100e-6)\n",
+    "                    current_diff = self.targ_current - current\n",
+    "                    reg_2 += 1\n",
+    "\n",
     "            #print(\"La corriente final es de\",current,\" A.\\nEl registro es:\", reg-1)\n",
     "\n",
-    "        return current_init, current, reg-1\n",
+    "        return current_init, current, reg-1, reg_2-1\n",
     "        \n",
     "\n",
-    "    def save2csv(self,current_init,current,reg,filename:str):\n",
+    "    def save2csv(self,current_init,current,reg,reg_2,filename:str):\n",
     "        self.current_init = current_init\n",
     "        self.current = current\n",
     "        self.reg = reg\n",
+    "        self.reg_2 = reg_2\n",
     "        self.filename = filename\n",
     "\n",
     "        if not os.path.exists('./'+filename+'.csv'): # Escribir el encabezado si es que se trata de un archivo nuevo\n",
     "            with open(filename+'.csv', 'w', newline='') as file:\n",
     "                writer = csv.writer(file)\n",
-    "                writer.writerow(['Corriente inicial (A)','Corriente final (A)','Valor del registro (decimal)', 'Valor del registro (binario)'])\n",
+    "                writer.writerow(['Corriente inicial (A)','Corriente final (A)','Valor del registro 1', 'Valor del registro 2'])\n",
     "        \n",
     "        with open(filename+'.csv', 'a', newline='') as file: # Agrega los datos del ajuste al csv\n",
     "            writer = csv.writer(file)\n",
-    "            writer.writerow([current_init,current,reg,bin(reg)])"
+    "            writer.writerow([current_init,current,reg,reg_2])"
    ]
   },
   {
@@ -123,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "471a2f2f-d772-408e-be96-d2ef23e2c509",
    "metadata": {},
    "outputs": [],
@@ -145,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d76910db-7ca5-4e8d-be75-3330ddf856e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in seed_arr:\n",
-    "    [init,current,reg]=aic1.adjust_I(i)\n",
-    "    aic1.save2csv(init,current,reg,filename)\n",
+    "    [init,current,reg,reg_2]=aic1.adjust_I(i)\n",
+    "    aic1.save2csv(init,current,reg,reg_2,filename)\n",
     "    init_arr.append(init)\n",
     "    current_arr.append(current)"
    ]
@@ -168,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "1d3c8479-2acc-4213-ae6c-6e70be315d40",
    "metadata": {},
    "outputs": [
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bcc275c7-76a7-478e-abdf-74ed04fbeacf",
    "metadata": {},
    "outputs": [
@@ -222,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "84a062b9-259b-45e3-b02d-932233721e17",
    "metadata": {},
    "outputs": [
@@ -354,7 +371,7 @@
        "9                       0b1011  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
