--- a/entrevista_dfeoli.ipynb
+++ b/entrevista_dfeoli.ipynb
@@ -5,8 +5,8 @@
    "id": "d16d69fa-932a-4ae5-b67d-70848c7d57a9",
    "metadata": {},
    "source": [
-    "# <center> Functional testing and Binning\n",
-    "## <center> Practice\n",
+    "# <center> Test Engineer\n",
+    "## <center> Current adjustment simulator for IC testing\n",
     "***\n",
     "Autora: Daniela Feoli Grant<br>\n",
     "Creación: 09.01.2024<br>\n",
