--- a/entrevista_dfeoli.ipynb
+++ b/entrevista_dfeoli.ipynb
@@ -16,8 +16,7 @@
     "- Se cambió el algoritmo para calcular el registro deseado: se calcula el cociente de la diferencia entre la corriente inicial y la corriente deseada y el valor que ajusta cada bit del registro (step)\n",
     "- Se cambió la forma de guardar los datos en el CSV para utilizar data frames de Pandas\n",
     "\n",
-    "El siguiente código corresponde al problema a resolver para la entrevista técnica de \n",
-    "Allegro Microsystems para el puesto de Test Engineer. Simula la funcionalidad de los IC de Allegro para ajustar\n",
+    "El siguiente código simula la funcionalidad de los IC de Allegro para ajustar\n",
     "la corriente."
    ]
   },
